--- a/All games/index.html
+++ b/All games/index.html
@@ -55,7 +55,10 @@
                     <option value="reset">Reset</option>
                 </select>
             </form>
-            <button></button>
+            <button class="btn btn-primary">Wee!</button>
+            <button class="btn btn-danger">Yahoo!</button>
+            <button class="btn btn-warning">Google!</button>
+            <button class="btn btn-success">Facebook!</button>
         </div>
     </div>
 
